update - junit tests